# libnpcJava

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  pom.xml
docs/: fns.js  i18n.js  index.html
native/src/: jni_bridge.cpp  jni_comparison.cpp  jni_creation.cpp  jni_einsum.cpp  jni_fft.cpp  jni_histogram.cpp  jni_interp.cpp  jni_io.cpp  jni_linalg.cpp  jni_logic.cpp  jni_math.cpp  jni_misc.cpp  jni_mutation.cpp  jni_nanutils.cpp  jni_polynomial.cpp  jni_random.cpp  jni_setops.cpp  jni_shape.cpp  jni_sorting.cpp  jni_stats.cpp  jni_util.h  jni_window.cpp
src/main/java/libnpc/: DType.java  EigResult.java  Histogram2DResult.java  HistogramDDResult.java  HistogramResult.java  LuResult.java  NativeLib.java  Npc.java  NpcArray.java  QrResult.java  SvdResult.java  UniqueResult.java  package-info.java
src/main/java/libnpc/io/: ReadtxtBuilder.java  SavetxtBuilder.java
src/test/java/libnpc/: QuickTest.java  TestAutoCloseable.java  TestNpcArray.java
